--- a/work.html
+++ b/work.html
@@ -52,7 +52,7 @@
         </li>
         <li class="work-page-grid-item">
           <figure>
-            <img src="assets/temp/first-name-last-name--project-title--category-1.jpg" alt="Describe your project">
+            <img src="assets/project-gifs/duncan-snooks-clonehero-charts.gif" alt="Charted tracks for Clonehero">
           </figure>
           <a href="project-2.html">
             <div class="overlay">
