--- a/work.html
+++ b/work.html
@@ -52,12 +52,12 @@
         </li>
         <li class="work-page-grid-item">
           <figure>
-            <img src="assets/project-gifs/duncan-snooks-clonehero-charts.gif" alt="Charted tracks for Clonehero">
+            <img src="assets/project-gifs/duncan-snooks-clonehero-charts.gif" alt="Charted tracks for Clone Hero">
           </figure>
           <a href="project-2.html">
             <div class="overlay">
-              <h1 class="overlay-title">Text Overlay</h1>
-              <h4 class="overlay-description">Interactive</h4>
+              <h1 class="overlay-title">My Clone Hero Charts</h1>
+              <h4 class="overlay-description">Quality Charts for anyone who enjoys Clone Hero</h4>
             </div>
           </a>
         </li>
