Big Project 2 Additions
Added assets for project 2. Changed out placeholder emojis with images. Changed styling to a more basic black on white temporarily.

--- a/work.html
+++ b/work.html
@@ -38,9 +38,9 @@
         </ul>
       </header>
       <div class="hero-headline-wrapper">
-        <h1 class="stroke-shadow">
-          Hello, I'm a free portfolio template for creatives, graphic designers,
-          illustrators, and interactive designers to showcase their work!
+        <h1>
+          Hello I'm Duncan, I enjoy photography, creating music, and playing
+          video games.
         </h1>
       </div>
       <footer class="hero-footer">
@@ -81,7 +81,7 @@
             </figure>
             <a href="project-2.html">
               <div class="overlay">
-                <h1 class="overlay-title">My Clone Hero Charts</h1>
+                <h1 class="overlay-title">Clone Hero Charts</h1>
                 <h4 class="overlay-description">
                   Quality Charts for anyone who enjoys Clone Hero
                 </h4>
