--- a/project-2.html
+++ b/project-2.html
@@ -23,12 +23,8 @@
   <div class="project-wrapper">
     <aside class="project-aside">
       <div class="project-info">
-        <h1 class="project-title">The Title Of Your Project</h1>
-        <p class="project-description">A brief description of your project goes here. The background colors are only to
-          show you the <em>.project-aside</em> and <em>.project-details</em> boxes.</p>
-          <p class="project-description">This is a sticky sidebar (<em>.project-aside</em>) so that your project title and description remain
-            visible as you scroll down the page. To remove the sticky sidebar, see <em>Sidebar on Large Devices</em> in
-            style.css.</p>
+        <h1 class="project-title">Clone Hero Charts</h1>
+        <p class="project-description">Some Clone Hero charts I have created in the past and hopefully the future.</p>
       </div>
       <ul class="project-navigation">
         <li class="arrow"><a href="project-1.html" class="navigation-arrow"><i class="fas fa-arrow-left fa-2x"></i></a>
@@ -37,10 +33,10 @@
       </ul>
     </aside>
     <main class="project-details">
-      <div class="project-image"><span class="large-emoji-placeholder">🐸</span></div>
-      <div class="project-image"><span class="large-emoji-placeholder">🌼</span></div>
-      <div class="project-image"><span class="large-emoji-placeholder">🌵</span></div>
-      <div class="project-image"><span class="large-emoji-placeholder">✨</span></div>
+      <div class="project-image"><span class="large-emoji-placeholder"><img src="assets/project-2/love-is-the-drug.jpg"/></span></div>
+      <div class="project-image"><span class="large-emoji-placeholder"><img src="assets/project-2/leave-the-door-open.jpg"/></span></div>
+      <div class="project-image"><span class="large-emoji-placeholder"><img src="assets/project-2/prairie-rose.png"/></span></div>
+      <div class="project-image"><span class="large-emoji-placeholder"><img src="assets/project-2/brandy.jpg"/></span></div>
       <div class="project-image"><span class="large-emoji-placeholder">🕷</span></div>
     </main>
   </div>
