--- a/project-4.html
+++ b/project-4.html
@@ -38,22 +38,27 @@
     <div class="project-wrapper">
       <aside class="project-aside">
         <div class="project-info">
-          <h1 class="project-title">Shipyards Park Photoshoot</h1>
+          <h1 class="project-title">The Title Of Your Project</h1>
           <p class="project-description">
-            A photoshoot done for Multimedia 111, image editing fundamentals.
-            The task was to take pictures of a tourism destination and then
-            enhance the photos in Adobe Lightroom without making them appear
-            unrealistic.
+            A brief description of your project goes here. The background colors
+            are only to show you the <em>.project-aside</em> and
+            <em>.project-details</em> boxes.
+          </p>
+          <p class="project-description">
+            This is a sticky sidebar (<em>.project-aside</em>) so that your
+            project title and description remain visible as you scroll down the
+            page. To remove the sticky sidebar, see
+            <em>Sidebar on Large Devices</em> in style.css.
           </p>
         </div>
         <ul class="project-navigation">
           <li class="arrow">
-            <a href="#" class="navigation-arrow"
+            <a href="project-3.html" class="navigation-arrow"
               ><i class="fas fa-arrow-left fa-2x"></i
             ></a>
           </li>
           <li class="arrow">
-            <a href="project-2.html" class="navigation-arrow"
+            <a href="project-5.html" class="navigation-arrow"
               ><i class="fas fa-arrow-right fa-2x"></i
             ></a>
           </li>
@@ -62,7 +67,7 @@
       <main class="project-details">
         <div class="project-image">
           <img
-            src="assets/project-1/project-1-photograph-comparison/duncan-snooks-shipyards-park1.jpg"
+            src="assets/project-1/birthday-1.png"
             width="800"
             height="800"
             alt="A description of the image"
@@ -70,7 +75,7 @@
         </div>
         <div class="project-image">
           <img
-            src="assets/project-1/project-1-photograph-comparison/duncan-snooks-shipyards-park2.jpg"
+            src="assets/project-1/birthday-2.png"
             width="800"
             height="800"
             alt="A description of the image"
@@ -78,51 +83,30 @@
         </div>
         <div class="project-image">
           <img
-            src="assets/project-1/project-1-photograph-comparison/duncan-snooks-shipyards-park3.jpg"
+            src="assets/project-1/birthday-3.png"
             width="800"
             height="800"
             alt="A description of the image"
           />
         </div>
-        <div class="project-image">
-          <img
-            src="assets/project-1/project-1-photograph-comparison/duncan-snooks-shipyards-park4.jpg"
-            width="800"
-            height="800"
-            alt="A description of the image"
-          />
+        <div class="project-image-container">
+          <div class="project-image">
+            <span class="large-emoji-placeholder">⭐️</span>
+          </div>
+          <div class="project-image">
+            <span class="large-emoji-placeholder">🌸</span>
+          </div>
         </div>
         <div class="project-image">
-          <img
-            src="assets/project-1/project-1-photograph-comparison/duncan-snooks-shipyards-park5.jpg"
-            width="800"
-            height="800"
-            alt="A description of the image"
-          />
+          <span class="large-emoji-placeholder">🐙</span>
         </div>
-        <div class="project-image">
-          <img
-            src="assets/project-1/project-1-photograph-comparison/duncan-snooks-shipyards-park6.jpg"
-            width="800"
-            height="800"
-            alt="A description of the image"
-          />
-        </div>
-        <div class="project-image">
-          <img
-            src="assets/project-1/project-1-photograph-comparison/duncan-snooks-shipyards-park7.jpg"
-            width="800"
-            height="800"
-            alt="A description of the image"
-          />
-        </div>
-        <div class="project-image">
-          <img
-            src="assets/project-1/project-1-photograph-comparison/duncan-snooks-shipyards-park8.jpg"
-            width="800"
-            height="800"
-            alt="A description of the image"
-          />
+        <div class="project-image-container">
+          <div class="project-image">
+            <span class="large-emoji-placeholder">🔥</span>
+          </div>
+          <div class="project-image">
+            <span class="large-emoji-placeholder">🥑</span>
+          </div>
         </div>
       </main>
     </div>
@@ -204,7 +188,7 @@
       </li>
     </ul>
     <div id="myID" class="bottomMenu hide">
-      <a href="project-2.html">Next Project</a>
+      <a href="project-5.html">Next Project</a>
     </div>
 
     <script>
