--- a/work.html
+++ b/work.html
@@ -75,16 +75,14 @@
           <li class="work-page-grid-item">
             <figure>
               <img
-                src="assets/project-gifs/duncan-snooks-clonehero-charts.gif"
-                alt="Charted tracks for Clone Hero"
+                src="assets/temp/first-name-last-name--project-title--category-3.jpg"
+                alt="Describe your project"
               />
             </figure>
             <a href="project-2.html">
               <div class="overlay">
-                <h1 class="overlay-title">Clone Hero Charts</h1>
-                <h4 class="overlay-description">
-                  Quality Charts for anyone who enjoys Clone Hero
-                </h4>
+                <h1 class="overlay-title">Text Overlay</h1>
+                <h4 class="overlay-description"></h4>
               </div>
             </a>
           </li>
@@ -95,7 +93,7 @@
                 alt="Describe your project"
               />
             </figure>
-            <a href="project-1.html">
+            <a href="project-3.html">
               <div class="overlay">
                 <h1 class="overlay-title">Text Overlay</h1>
                 <h4 class="overlay-description">Packaging</h4>
@@ -109,7 +107,7 @@
                 alt="Describe your project"
               />
             </figure>
-            <a href="project-1.html">
+            <a href="project-4.html">
               <div class="overlay">
                 <h1 class="overlay-title">Text Overlay</h1>
                 <h4 class="overlay-description">Fine Art</h4>
@@ -123,7 +121,7 @@
                 alt="Describe your project"
               />
             </figure>
-            <a href="project-1.html">
+            <a href="project-5.html">
               <div class="overlay">
                 <h1 class="overlay-title">Text Overlay</h1>
                 <h4 class="overlay-description">Illustration</h4>
@@ -133,14 +131,16 @@
           <li class="work-page-grid-item">
             <figure>
               <img
-                src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/316293/phone.jpg"
+                src="assets/project-gifs/duncan-snooks-clonehero-charts.gif"
                 alt="Describe your project"
               />
             </figure>
-            <a href="project-1.html">
+            <a href="project-6.html">
               <div class="overlay">
-                <h1 class="overlay-title">Text Overlay</h1>
-                <h4 class="overlay-description">Add Your Category</h4>
+                <h1 class="overlay-title">Clone Hero Charts</h1>
+                <h4 class="overlay-description">
+                  Quality Charts for anyone who enjoys Clone Hero
+                </h4>
               </div>
             </a>
           </li>
