--- a/project-3.html
+++ b/project-3.html
@@ -171,14 +171,7 @@
           <li class="footer-nav-item"><a href="about.html">About</a></li>
         </ul>
       </li>
-      <li class="footer-item-3">
-        <h2>Contact &amp; Social</h2>
-        <ul class="socials-list">
-          <li class="social-item"><a href="#">Insta</a></li>
-          <li class="social-item"><a href="#">LinkedIn</a></li>
-          <li class="social-item"><a href="#">Behance</a></li>
-        </ul>
-      </li>
+      <li class="footer-item-3"></li>
       <li class="footer-item-4">
         <p><a href="#top">Smooth scroll to the top</a></p>
         <p class="fineprint">
