--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
    </li>
     <li class="about-about-me"><h2>About Me</h2>
       <div>
-      <p>I'm Duncan. I was born in Whitehorse, Yukon and have lived here my whole life. I enjoy reading, listening to (and occasionally creating) music, and playing video games. I have recently taken up photography and website design and have taken classes on them at Yukon University. If you would like to reach me for either a photography or website project please send me an <a href="mailto:duncan.snooks@gmail.com" style="cursor:pointer">email</a>. Thanks for visiting my website.
+      <p>I'm Duncan. I was born in Whitehorse, Yukon and have lived here my whole life. I enjoy reading, listening to (and occasionally creating) music, and playing video games. I have experience in excel and I have recently taken up photography and website design and have taken classes on them at Yukon University. If you would like to reach me for either a photography or website project please send me an <a href="mailto:duncan.snooks@gmail.com" style="cursor:pointer">email</a>. Thanks for visiting my website.
       </p>
       </div>
       <h3>Testimonials</h3>
