--- a/project-1.html
+++ b/project-1.html
@@ -43,7 +43,8 @@
             A photoshoot done for Multimedia 111, image editing fundamentals.
             The task was to take pictures of a tourism destination and then
             enhance the photos in Adobe Lightroom without making them appear
-            unrealistic.
+            unrealistic. Some photos were taken with imperfections to help
+            showcase touchup skills e.g. removing lense flare or correcting ISO.
           </p>
         </div>
         <ul class="project-navigation">
