--- a/work.html
+++ b/work.html
@@ -234,30 +234,16 @@
       <li class="footer-item-1">
         <h2>About Me</h2>
         <p>
-          A highly customizable portfolio starter template with a big hero for
-          your branding and intro. The work page is based on
-          <a
-            href="https://css-tricks.com/snippets/css/complete-guide-grid/"
-            target="_blank"
-            >CSS Grid</a
-          >. The project page has a sticky sidebar. Beginngers can add their own
-          logo,
-          <a href="https://fonts.google.com/" target="_blank"
-            >custom typography</a
-          >, custom colours, custom hover states, custom cursor, and more.
-        </p>
-        <p>
-          Customize the hero and footer. Make something randomly fly across the
-          screen! Experiment with
-          <a href="https://mycolor.space/gradient" target="_blank"
-            >animated gradients</a
-          >, animated GIFs, and
-          <a href="https://www.svgator.com/" target="_blank">animated SVGs</a>!
-          Add your own typewriter effect, parallax effect or custom effects and
-          easter eggs! Consider adding a <a href="play.html">Play</a> page or
-          <a href="resume.html">resume</a>. Don't forget to customize your
-          <a href="404.html">404 Error Page</a> and optimize your page titles
-          and descriptions for SEO!
+          I'm Duncan. I was born in Whitehorse, Yukon and have lived here my
+          whole life. I enjoy reading, listening to (and occasionally creating)
+          music, and playing video games. Please take a look at a selection of
+          my works located above. I have experience in excel and I have recently
+          taken up photography and website design and have taken classes on them
+          at Yukon University. If you would like to reach me for either a
+          photography or website project please send me an
+          <a href="mailto:duncan.snooks@gmail.com" style="cursor: pointer"
+            >email</a
+          >. Thanks for visiting my website.
         </p>
       </li>
       <li class="footer-item-2">
@@ -272,39 +258,47 @@
           <li class="footer-nav-item"><a href="index.html">Holding Page</a></li>
           <li class="footer-nav-item"><a href="work.html">Work Page</a></li>
           <li class="footer-nav-item">
-            <a href="work-clean.html">Work Page (Clean Version)</a>
+            <a href="project-1.html">Shipyards Park Photoshoot</a>
           </li>
           <li class="footer-nav-item">
-            <a href="work-clean-flier.html"
-              >Work Page (Clean Version with Flier)</a
-            >
+            <a href="project-2.html">Magazine Photoshoot</a>
           </li>
           <li class="footer-nav-item">
-            <a href="work-grayscale.html">Work Page (Grayscale Filter)</a>
+            <a href="project-3.html">Helpful Excel Workbooks</a>
           </li>
           <li class="footer-nav-item">
-            <a href="work-ghost.html">Work Page (Ghost Flying Icon)</a>
+            <a href="project-4.html">Miscellaneous Photographs</a>
           </li>
-          <li class="footer-nav-item">
-            <a href="project-1.html">Project Page</a>
+          <li class="footer-nan-item">
+            <a href="project-5.html">Clone Hero Charts</a>
           </li>
-          <li class="footer-nav-item"><a href="about.html">About</a></li>
+          <li class="footer-nav-item"><a href="about.html">About Me</a></li>
         </ul>
       </li>
       <li class="footer-item-3">
         <h2>Contact &amp; Social</h2>
         <ul class="socials-list">
-          <li class="social-item"><a href="#">Insta</a></li>
-          <li class="social-item"><a href="#">LinkedIn</a></li>
-          <li class="social-item"><a href="#">Behance</a></li>
+          <li class="social-item">
+            <a href="mailto:duncan.snooks@gmail.com" style="cursor: pointer"
+              >Email</a
+            >
+          </li>
+          <li class="social-item">
+            <a href="https://www.linkedin.com/in/duncan-snooks-531017300/"
+              >LinkedIn</a
+            >
+          </li>
+          <li class="social-item">
+            <a href="https://codepen.io/duncan0714">Codepen</a>
+          </li>
+          <li class="social-item">
+            <a href="https://github.com/duncan0714">Github</a>
+          </li>
         </ul>
       </li>
       <li class="footer-item-4">
-        <p><a href="#top">Smooth scroll to the top</a></p>
-        <p class="fineprint">
-          &copy; 2020-2024. Hand crafted with <span class="heart">❤</span> +
-          Flexbox + CSS Grid by James Neufeld.
-        </p>
+        <p><a href="#top">Back To Top</a></p>
+        <p class="fineprint">&copy; 2024. Duncan Snooks</p>
       </li>
     </ul>
 
