--- a/work.html
+++ b/work.html
@@ -125,16 +125,7 @@
           video games.
         </h1>
       </div>
-      <footer class="hero-footer">
-        <ul class="hero-footer-navigation">
-          <li><a href="#" class="custom-navigation">Instagram</a></li>
-          <li>
-            <a href="mailto:james@magnetude.com" class="custom-navigation"
-              >Email</a
-            >
-          </li>
-        </ul>
-      </footer>
+      <footer class="hero-footer"></footer>
     </section>
 
     <main class="work-wrapper">
@@ -185,39 +176,11 @@
           <li class="work-page-grid-item">
             <figure>
               <img
-                src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/316293/phone.jpg"
-                alt="Describe your project"
-              />
-            </figure>
-            <a href="project-4.html">
-              <div class="overlay">
-                <h1 class="overlay-title">Text Overlay</h1>
-                <h4 class="overlay-description">Fine Art</h4>
-              </div>
-            </a>
-          </li>
-          <li class="work-page-grid-item">
-            <figure>
-              <img
-                src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/316293/pawel-czerwinski.jpg"
-                alt="Describe your project"
-              />
-            </figure>
-            <a href="project-5.html">
-              <div class="overlay">
-                <h1 class="overlay-title">Text Overlay</h1>
-                <h4 class="overlay-description">Illustration</h4>
-              </div>
-            </a>
-          </li>
-          <li class="work-page-grid-item">
-            <figure>
-              <img
                 src="assets/project-gifs/duncan-snooks-clonehero-charts.gif"
                 alt="Describe your project"
               />
             </figure>
-            <a href="project-6.html">
+            <a href="project-4.html">
               <div class="overlay">
                 <h1 class="overlay-title">Clone Hero Charts</h1>
                 <h4 class="overlay-description">
@@ -247,13 +210,6 @@
         </p>
       </li>
       <li class="footer-item-2">
-        <h2>Awards &amp; Recognition</h2>
-        <ul class="awards-list">
-          <li class="award-item"><a href="#">Award goes here</a></li>
-          <li class="award-item"><a href="#">Recognition goes here</a></li>
-          <li class="award-item"><a href="#">Award goes here</a></li>
-        </ul>
-        <h2>Selected Works</h2>
         <ul class="footer-nav-list">
           <li class="footer-nav-item"><a href="index.html">Holding Page</a></li>
           <li class="footer-nav-item"><a href="work.html">Work Page</a></li>
@@ -267,10 +223,7 @@
             <a href="project-3.html">Helpful Excel Workbooks</a>
           </li>
           <li class="footer-nav-item">
-            <a href="project-4.html">Miscellaneous Photographs</a>
-          </li>
-          <li class="footer-nan-item">
-            <a href="project-5.html">Clone Hero Charts</a>
+            <a href="project-4.html">Clone Hero Charts</a>
           </li>
           <li class="footer-nav-item"><a href="about.html">About Me</a></li>
         </ul>
