--- a/project-3.html
+++ b/project-3.html
@@ -53,12 +53,12 @@
         </div>
         <ul class="project-navigation">
           <li class="arrow">
-            <a href="#" class="navigation-arrow"
+            <a href="project-2.html" class="navigation-arrow"
               ><i class="fas fa-arrow-left fa-2x"></i
             ></a>
           </li>
           <li class="arrow">
-            <a href="project-2.html" class="navigation-arrow"
+            <a href="project-4.html" class="navigation-arrow"
               ><i class="fas fa-arrow-right fa-2x"></i
             ></a>
           </li>
@@ -66,47 +66,20 @@
       </aside>
       <main class="project-details">
         <div class="project-image">
-          <img
-            src="assets/project-1/birthday-1.png"
-            width="800"
-            height="800"
-            alt="A description of the image"
-          />
+          <a
+            href="assets/project-3/duncan-snooks-financial-tools.xlsx"
+            download
+          >
+            <img
+              src="assets/project-3/duncan-snooks-financial-tools.jpg"
+              width="1500"
+              height="704"
+              alt="A description of the image"
+            />
+          </a>
         </div>
-        <div class="project-image">
-          <img
-            src="assets/project-1/birthday-2.png"
-            width="800"
-            height="800"
-            alt="A description of the image"
-          />
-        </div>
-        <div class="project-image">
-          <img
-            src="assets/project-1/birthday-3.png"
-            width="800"
-            height="800"
-            alt="A description of the image"
-          />
-        </div>
-        <div class="project-image-container">
-          <div class="project-image">
-            <span class="large-emoji-placeholder">⭐️</span>
-          </div>
-          <div class="project-image">
-            <span class="large-emoji-placeholder">🌸</span>
-          </div>
-        </div>
-        <div class="project-image">
-          <span class="large-emoji-placeholder">🐙</span>
-        </div>
-        <div class="project-image-container">
-          <div class="project-image">
-            <span class="large-emoji-placeholder">🔥</span>
-          </div>
-          <div class="project-image">
-            <span class="large-emoji-placeholder">🥑</span>
-          </div>
+        <div class="project-image-descriptor">
+          An amortization schedule for planning a large purchase
         </div>
       </main>
     </div>
