--- a/project-2.html
+++ b/project-2.html
@@ -67,46 +67,27 @@
       <main class="project-details">
         <div class="project-image">
           <img
-            src="assets/project-1/birthday-1.png"
-            width="800"
-            height="800"
+            src="assets/project-2/duncan-snooks-paramount.jpg"
+            width="1174"
+            height="1500"
             alt="A description of the image"
           />
         </div>
         <div class="project-image">
           <img
-            src="assets/project-1/birthday-2.png"
-            width="800"
-            height="800"
+            src="assets/project-2/duncan-snooks-rembrant.jpg"
+            width="1174"
+            height="1500"
             alt="A description of the image"
           />
         </div>
         <div class="project-image">
           <img
-            src="assets/project-1/birthday-3.png"
-            width="800"
-            height="800"
+            src="assets/project-2/duncan-snooks-split.jpg"
+            width="1174"
+            height="1500"
             alt="A description of the image"
           />
-        </div>
-        <div class="project-image-container">
-          <div class="project-image">
-            <span class="large-emoji-placeholder">⭐️</span>
-          </div>
-          <div class="project-image">
-            <span class="large-emoji-placeholder">🌸</span>
-          </div>
-        </div>
-        <div class="project-image">
-          <span class="large-emoji-placeholder">🐙</span>
-        </div>
-        <div class="project-image-container">
-          <div class="project-image">
-            <span class="large-emoji-placeholder">🔥</span>
-          </div>
-          <div class="project-image">
-            <span class="large-emoji-placeholder">🥑</span>
-          </div>
         </div>
       </main>
     </div>
