--- a/work.html
+++ b/work.html
@@ -16,7 +16,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css"
     />
     <script
-      src="https://kit.fontawesome.com/d300c2ea15.js"
+      src="https://kit.fontawesome.com/f703662861.js"
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="./styles/style.css" />
@@ -134,42 +134,48 @@
           <li class="work-page-grid-item">
             <figure>
               <img
-                src="assets/project-images/duncan-snooks-shipyards-park.jpg"
-                alt="Describe your project"
+                src="assets/project-images/duncan-snooks-shipyards-park-cropped.jpg"
+                alt="A tourism photoshoot for Shipyards Park"
               />
             </figure>
             <a href="project-1.html">
               <div class="overlay">
-                <h1 class="overlay-title">Text Overlay</h1>
-                <h4 class="overlay-description">Branding &amp; Illustration</h4>
+                <h1 class="overlay-title">Shipyards Park Photoshoot</h1>
+                <h4 class="overlay-description">
+                  A photography project for a tourist destination
+                </h4>
               </div>
             </a>
           </li>
           <li class="work-page-grid-item">
             <figure>
               <img
-                src="assets/temp/first-name-last-name--project-title--category-3.jpg"
-                alt="Describe your project"
+                src="assets/project-images/duncan-snooks-rembrant-cropped.jpg"
+                alt="A magazine photoshoot to showcase lighting styles"
               />
             </figure>
             <a href="project-2.html">
               <div class="overlay">
-                <h1 class="overlay-title">Text Overlay</h1>
-                <h4 class="overlay-description"></h4>
+                <h1 class="overlay-title">Magazine Photoshoot</h1>
+                <h4 class="overlay-description">
+                  Magazine covers showcasing different lighting techniques
+                </h4>
               </div>
             </a>
           </li>
           <li class="work-page-grid-item">
             <figure>
               <img
-                src="assets/temp/first-name-last-name--project-title--category-2.jpg"
+                src="assets/project-images/duncan-snooks-excel-spreadsheets.jpg"
                 alt="Describe your project"
               />
             </figure>
             <a href="project-3.html">
               <div class="overlay">
-                <h1 class="overlay-title">Text Overlay</h1>
-                <h4 class="overlay-description">Packaging</h4>
+                <h1 class="overlay-title">Excel Workbooks</h1>
+                <h4 class="overlay-description">
+                  Helpful excel workbooks that are free to use
+                </h4>
               </div>
             </a>
           </li>
@@ -233,19 +239,23 @@
         <ul class="socials-list">
           <li class="social-item">
             <a href="mailto:duncan.snooks@gmail.com" style="cursor: pointer"
-              >Email</a
+              ><i class="fa-solid fa-envelope"></i> Email</a
             >
           </li>
           <li class="social-item">
             <a href="https://www.linkedin.com/in/duncan-snooks-531017300/"
-              >LinkedIn</a
+              ><i class="fa-brands fa-linkedin"></i> LinkedIn</a
             >
           </li>
           <li class="social-item">
-            <a href="https://codepen.io/duncan0714">Codepen</a>
+            <a href="https://codepen.io/duncan0714"
+              ><i class="fa-brands fa-codepen"></i> Codepen</a
+            >
           </li>
           <li class="social-item">
-            <a href="https://github.com/duncan0714">Github</a>
+            <a href="https://github.com/duncan0714"
+              ><i class="fa-brands fa-github"></i> Github</a
+            >
           </li>
         </ul>
       </li>
