Changed footer font sizes

--- a/work.html
+++ b/work.html
@@ -216,22 +216,29 @@
         </p>
       </li>
       <li class="footer-item-2">
+        <h2>Visit Other Pages</h2>
         <ul class="footer-nav-list">
-          <li class="footer-nav-item"><a href="index.html">Holding Page</a></li>
-          <li class="footer-nav-item"><a href="work.html">Work Page</a></li>
           <li class="footer-nav-item">
-            <a href="project-1.html">Shipyards Park Photoshoot</a>
+            <a href="index.html"><h6>Holding Page</h6></a>
           </li>
           <li class="footer-nav-item">
-            <a href="project-2.html">Magazine Photoshoot</a>
+            <a href="work.html"><h6>Work Page</h6></a>
           </li>
           <li class="footer-nav-item">
-            <a href="project-3.html">Helpful Excel Workbooks</a>
+            <a href="project-1.html"><h6>Shipyards Park Photoshoot</h6></a>
           </li>
           <li class="footer-nav-item">
-            <a href="project-4.html">Clone Hero Charts</a>
+            <a href="project-2.html"><h6>Magazine Photoshoot</h6></a>
           </li>
-          <li class="footer-nav-item"><a href="about.html">About Me</a></li>
+          <li class="footer-nav-item">
+            <a href="project-3.html"><h6>Helpful Excel Workbooks</h6></a>
+          </li>
+          <li class="footer-nav-item">
+            <a href="project-4.html"><h6>Clone Hero Charts</h6></a>
+          </li>
+          <li class="footer-nav-item">
+            <a href="about.html"><h6>About Me</h6></a>
+          </li>
         </ul>
       </li>
       <li class="footer-item-3">
@@ -239,22 +246,26 @@
         <ul class="socials-list">
           <li class="social-item">
             <a href="mailto:duncan.snooks@gmail.com" style="cursor: pointer"
-              ><i class="fa-solid fa-envelope"></i> Email</a
+              ><i class="fa-solid fa-envelope"></i>
+              <h6>Email</h6></a
             >
           </li>
           <li class="social-item">
             <a href="https://www.linkedin.com/in/duncan-snooks-531017300/"
-              ><i class="fa-brands fa-linkedin"></i> LinkedIn</a
+              ><i class="fa-brands fa-linkedin"></i>
+              <h6>LinkedIn</h6></a
             >
           </li>
           <li class="social-item">
             <a href="https://codepen.io/duncan0714"
-              ><i class="fa-brands fa-codepen"></i> Codepen</a
+              ><i class="fa-brands fa-codepen"></i>
+              <h6>Codepen</h6></a
             >
           </li>
           <li class="social-item">
             <a href="https://github.com/duncan0714"
-              ><i class="fa-brands fa-github"></i> Github</a
+              ><i class="fa-brands fa-github"></i>
+              <h6>Github</h6></a
             >
           </li>
         </ul>
