Changed logo on project 1

--- a/work.html
+++ b/work.html
@@ -231,7 +231,7 @@
             <a href="project-2.html"><h6>Magazine Photoshoot</h6></a>
           </li>
           <li class="footer-nav-item">
-            <a href="project-3.html"><h6>Helpful Excel Workbooks</h6></a>
+            <a href="project-3.html"><h6>Excel Workbooks</h6></a>
           </li>
           <li class="footer-nav-item">
             <a href="project-4.html"><h6>Clone Hero Charts</h6></a>
