Added video to project 4

--- a/work.html
+++ b/work.html
@@ -272,32 +272,10 @@
       </li>
       <li class="footer-item-4">
         <p><a href="#top">Back To Top</a></p>
-        <p class="fineprint">&copy; 2024. Duncan Snooks</p>
+        <p class="fineprint">&copy; 2024 Duncan Snooks.</p>
       </li>
     </ul>
 
     <div id="myID" class="bottomMenu hide"><a href="#">Back to top</a></div>
-
-    <div class="flier">
-      <img
-        src="assets/branding-images/smiley-face.svg"
-        alt="Describe your image"
-      />
-    </div>
-
-    <script>
-      myID = document.getElementById("myID");
-
-      var myScrollFunc = function () {
-        var y = window.scrollY;
-        if (y >= 800) {
-          myID.className = "bottomMenu show";
-        } else {
-          myID.className = "bottomMenu hide";
-        }
-      };
-
-      window.addEventListener("scroll", myScrollFunc);
-    </script>
   </body>
 </html>
