Removed some unused pages & Copied Footers
Removed unused assets and work pages. Also copied finalized footer and required imports to all pages (except about).

--- a/404.html
+++ b/404.html
@@ -1,24 +1,113 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <title>
+      Free Creative Portfolio Template: Feb 2024 Version | Work Page
+    </title>
+    <meta
+      name="description"
+      content="When writing a meta description, keep it between 140 and 160 characters so Google can display your entire message. Don’t forget to include your keyword!"
+    />
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:image" content="screenshot.jpg" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css"
+    />
+    <script
+      src="https://kit.fontawesome.com/f703662861.js"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://kit.fontawesome.com/d300c2ea15.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="./styles/style.css" />
+  </head>
 
-<head>
-  <title>Free Creative Portfolio Template: Feb 2024 Version | Work Page</title>
-  <meta name="description"
-    content="When writing a meta description, keep it between 140 and 160 characters so Google can display your entire message. Don’t forget to include your keyword!">
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta property="og:image" content="screenshot.jpg">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
-  <script src="https://kit.fontawesome.com/d300c2ea15.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="./styles/style.css">
-</head>
-
-<body class="error-page">
+  <body class="error-page">
     <div class="error-page-wrapper">
       <div class="error-page-inner-container">
-       <h1 class="error-page-title">404 File Not Found</h1>
-       <p>Create a custom error page that matches your personal brand.</p>
-    </div>      
-   </div>
-</body>
+        <h1 class="error-page-title">404 File Not Found</h1>
+        <p>Create a custom error page that matches your personal brand.</p>
+      </div>
+    </div>
+    <ul class="global-footer">
+      <li class="footer-item-1">
+        <h2>About Me</h2>
+        <p>
+          I'm Duncan. I was born in Whitehorse, Yukon and have lived here my
+          whole life. I enjoy reading, listening to (and occasionally creating)
+          music, and playing video games. Please take a look at a selection of
+          my works located above. I have experience in excel and I have recently
+          taken up photography and website design and have taken classes on them
+          at Yukon University. If you would like to reach me for either a
+          photography or website project please send me an
+          <a href="mailto:duncan.snooks@gmail.com" style="cursor: pointer"
+            >email</a
+          >. Thanks for visiting my website.
+        </p>
+      </li>
+      <li class="footer-item-2">
+        <h2>Visit Other Pages</h2>
+        <ul class="footer-nav-list">
+          <li class="footer-nav-item">
+            <a href="index.html"><h6>Holding Page</h6></a>
+          </li>
+          <li class="footer-nav-item">
+            <a href="work.html"><h6>Work Page</h6></a>
+          </li>
+          <li class="footer-nav-item">
+            <a href="project-1.html"><h6>Shipyards Park Photoshoot</h6></a>
+          </li>
+          <li class="footer-nav-item">
+            <a href="project-2.html"><h6>Magazine Photoshoot</h6></a>
+          </li>
+          <li class="footer-nav-item">
+            <a href="project-3.html"><h6>Excel Workbooks</h6></a>
+          </li>
+          <li class="footer-nav-item">
+            <a href="project-4.html"><h6>Clone Hero Charts</h6></a>
+          </li>
+          <li class="footer-nav-item">
+            <a href="about.html"><h6>About Me</h6></a>
+          </li>
+        </ul>
+      </li>
+      <li class="footer-item-3">
+        <h2>Contact &amp; Social</h2>
+        <ul class="socials-list">
+          <li class="social-item">
+            <a href="mailto:duncan.snooks@gmail.com" style="cursor: pointer"
+              ><i class="fa-solid fa-envelope"></i>
+              <h6>Email</h6></a
+            >
+          </li>
+          <li class="social-item">
+            <a href="https://www.linkedin.com/in/duncan-snooks-531017300/"
+              ><i class="fa-brands fa-linkedin"></i>
+              <h6>LinkedIn</h6></a
+            >
+          </li>
+          <li class="social-item">
+            <a href="https://codepen.io/duncan0714"
+              ><i class="fa-brands fa-codepen"></i>
+              <h6>Codepen</h6></a
+            >
+          </li>
+          <li class="social-item">
+            <a href="https://github.com/duncan0714"
+              ><i class="fa-brands fa-github"></i>
+              <h6>Github</h6></a
+            >
+          </li>
+        </ul>
+      </li>
+      <li class="footer-item-4">
+        <p><a href="#top">Back To Top</a></p>
+        <p class="fineprint">&copy; 2024 Duncan Snooks.</p>
+      </li>
+    </ul>
+  </body>
 </html>
