--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
       src="https://kit.fontawesome.com/d300c2ea15.js"
       crossorigin="anonymous"
     ></script>
+    <script
+      src="https://kit.fontawesome.com/f703662861.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="./styles/style.css" />
   </head>
 
