--- a/project-1.html
+++ b/project-1.html
@@ -19,6 +19,10 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
     />
     <link rel="stylesheet" href="./styles/style.css" />
+    <script
+      src="https://kit.fontawesome.com/f703662861.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
 
   <body class="project-1">
@@ -213,77 +217,76 @@
       <li class="footer-item-1">
         <h2>About Me</h2>
         <p>
-          A highly customizable portfolio starter template with a big hero for
-          your branding and intro. The work page is based on
-          <a
-            href="https://css-tricks.com/snippets/css/complete-guide-grid/"
-            target="_blank"
-            >CSS Grid</a
-          >. The project page has a sticky sidebar. Beginngers can add their own
-          logo,
-          <a href="https://fonts.google.com/" target="_blank"
-            >custom typography</a
-          >, custom colours, custom hover states, custom cursor, and more.
-        </p>
-        <p>
-          Customize the hero and footer. Make something randomly fly across the
-          screen! Experiment with
-          <a href="https://mycolor.space/gradient" target="_blank"
-            >animated gradients</a
-          >, animated GIFs, and
-          <a href="https://www.svgator.com/" target="_blank">animated SVGs</a>!
-          Add your own typewriter effect, parallax effect or custom effects and
-          easter eggs! Consider adding a <a href="play.html">Play</a> page or
-          <a href="resume.html">resume</a>. Don't forget to customize your
-          <a href="404.html">404 Error Page</a> and optimize your page titles
-          and descriptions for SEO!
+          I'm Duncan. I was born in Whitehorse, Yukon and have lived here my
+          whole life. I enjoy reading, listening to (and occasionally creating)
+          music, and playing video games. Please take a look at a selection of
+          my works located above. I have experience in excel and I have recently
+          taken up photography and website design and have taken classes on them
+          at Yukon University. If you would like to reach me for either a
+          photography or website project please send me an
+          <a href="mailto:duncan.snooks@gmail.com" style="cursor: pointer"
+            >email</a
+          >. Thanks for visiting my website.
         </p>
       </li>
       <li class="footer-item-2">
-        <h2>Awards &amp; Recognition</h2>
-        <ul class="awards-list">
-          <li class="award-item"><a href="#">Award goes here</a></li>
-          <li class="award-item"><a href="#">Recognition goes here</a></li>
-          <li class="award-item"><a href="#">Award goes here</a></li>
-        </ul>
-        <h2>Selected Works</h2>
+        <h2>Visit Other Pages</h2>
         <ul class="footer-nav-list">
-          <li class="footer-nav-item"><a href="index.html">Holding Page</a></li>
-          <li class="footer-nav-item"><a href="work.html">Work Page</a></li>
           <li class="footer-nav-item">
-            <a href="work-clean.html">Work Page (Clean Version)</a>
+            <a href="index.html"><h6>Holding Page</h6></a>
           </li>
           <li class="footer-nav-item">
-            <a href="work-clean-flier.html"
-              >Work Page (Clean Version with Flier)</a
-            >
+            <a href="work.html"><h6>Work Page</h6></a>
           </li>
           <li class="footer-nav-item">
-            <a href="work-grayscale.html">Work Page (Grayscale Filter)</a>
+            <a href="project-1.html"><h6>Shipyards Park Photoshoot</h6></a>
           </li>
           <li class="footer-nav-item">
-            <a href="work-ghost.html">Work Page (Ghost Flying Icon)</a>
+            <a href="project-2.html"><h6>Magazine Photoshoot</h6></a>
           </li>
           <li class="footer-nav-item">
-            <a href="project-1.html">Project Page</a>
+            <a href="project-3.html"><h6>Excel Workbooks</h6></a>
           </li>
-          <li class="footer-nav-item"><a href="about.html">About</a></li>
+          <li class="footer-nav-item">
+            <a href="project-4.html"><h6>Clone Hero Charts</h6></a>
+          </li>
+          <li class="footer-nav-item">
+            <a href="about.html"><h6>About Me</h6></a>
+          </li>
         </ul>
       </li>
       <li class="footer-item-3">
         <h2>Contact &amp; Social</h2>
         <ul class="socials-list">
-          <li class="social-item"><a href="#">Insta</a></li>
-          <li class="social-item"><a href="#">LinkedIn</a></li>
-          <li class="social-item"><a href="#">Behance</a></li>
+          <li class="social-item">
+            <a href="mailto:duncan.snooks@gmail.com" style="cursor: pointer"
+              ><i class="fa-solid fa-envelope"></i>
+              <h6>Email</h6></a
+            >
+          </li>
+          <li class="social-item">
+            <a href="https://www.linkedin.com/in/duncan-snooks-531017300/"
+              ><i class="fa-brands fa-linkedin"></i>
+              <h6>LinkedIn</h6></a
+            >
+          </li>
+          <li class="social-item">
+            <a href="https://codepen.io/duncan0714"
+              ><i class="fa-brands fa-codepen"></i>
+              <h6>Codepen</h6></a
+            >
+          </li>
+          <li class="social-item">
+            <a href="https://github.com/duncan0714"
+              ><i class="fa-brands fa-github"></i>
+              <h6>Github</h6></a
+            >
+          </li>
         </ul>
       </li>
       <li class="footer-item-4">
-        <p><a href="#top">Smooth scroll to the top</a></p>
-        <p class="fineprint">
-          &copy; 2020-2024. Hand crafted with <span class="heart">❤</span> +
-          Flexbox + CSS Grid by James Neufeld.
-        </p>
+        <p><a href="#top">Back To Top</a></p>
+        <p class="fineprint">&copy; 2024 Duncan Snooks.</p>
       </li>
     </ul>
     <div id="myID" class="bottomMenu hide">
