--- a/blog.html
+++ b/blog.html
@@ -1,120 +1,191 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <title>
+      Free Creative Portfolio Template: Feb 2024 Version | Blog Page
+    </title>
+    <meta
+      name="description"
+      content="When writing a meta description, keep it between 140 and 160 characters so Google can display your entire message. Don’t forget to include your keyword!"
+    />
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+    />
+    <link rel="stylesheet" href="./styles/style.css" />
+    <script
+      src="https://kit.fontawesome.com/f703662861.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
 
-<head>
-    <title>Free Creative Portfolio Template: Feb 2024 Version | Blog Page</title>
-    <meta name="description"
-        content="When writing a meta description, keep it between 140 and 160 characters so Google can display your entire message. Don’t forget to include your keyword!">
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <link rel="stylesheet" href="./styles/style.css">
-</head>
-
-<body class="project-2">
+  <body class="project-2">
     <header class="hero-header">
-        <ul class="branding-navigation">
-            <li><a href="work.html" class="custom-navigation">Work</a></li>
-            <li class="logo"><a href="index.html"><img src="assets/branding-images/logo.svg" /></a></li>
-            <li><a href="about.html" class="custom-navigation">About</a></li>
-        </ul>
+      <ul class="branding-navigation">
+        <li><a href="work.html" class="custom-navigation">Work</a></li>
+        <li class="logo">
+          <a href="index.html"><img src="assets/branding-images/logo.svg" /></a>
+        </li>
+        <li><a href="about.html" class="custom-navigation">About</a></li>
+      </ul>
     </header>
     <div class="project-wrapper">
-        <aside class="project-aside">
-            <div class="project-info">
-                <h1 class="project-title">A Blog Post</h1>
-                <p class="project-description">A brief summary and/or contact details</p>
-            </div>
-            <ul class="project-navigation">
-                <li class="arrow"><a href="project-1.html" class="navigation-arrow"><i
-                            class="fas fa-arrow-left fa-2x"></i></a></li>
-                <li class="arrow"><a href="#" class="navigation-arrow"><i class="fas fa-arrow-right fa-2x"></i></a></li>
-            </ul>
-        </aside>
-        <main class="project-details">
-            <div class="text-section">
-                <h1>Heading 1</h1>
-                <h2>Heading 2</h2>
-                <h3>Heading 3</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam ullamcorper lacus quis risus
-                    dignissim, vitae fringilla massa vehicula. Sed fringilla laoreet dolor at mollis. Aliquam vitae
-                    turpis semper, porta est a, vestibulum velit. Sed id rhoncus dui, ut pretium mi. Praesent suscipit,
-                    dolor ut fermentum facilisis, nulla orci vestibulum lectus, sed placerat nisl turpis sed urna.
-                    Integer a nulla magna. Curabitur nec quam mollis, ornare dolor vitae, auctor risus. Fusce tempus
-                    lectus at metus maximus, at sodales magna venenatis.</p>
+      <aside class="project-aside">
+        <div class="project-info">
+          <h1 class="project-title">A Blog Post</h1>
+          <p class="project-description">
+            A brief summary and/or contact details
+          </p>
+        </div>
+        <ul class="project-navigation">
+          <li class="arrow">
+            <a href="project-1.html" class="navigation-arrow"
+              ><i class="fas fa-arrow-left fa-2x"></i
+            ></a>
+          </li>
+          <li class="arrow">
+            <a href="#" class="navigation-arrow"
+              ><i class="fas fa-arrow-right fa-2x"></i
+            ></a>
+          </li>
+        </ul>
+      </aside>
+      <main class="project-details">
+        <div class="text-section">
+          <h1>Heading 1</h1>
+          <h2>Heading 2</h2>
+          <h3>Heading 3</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam
+            ullamcorper lacus quis risus dignissim, vitae fringilla massa
+            vehicula. Sed fringilla laoreet dolor at mollis. Aliquam vitae
+            turpis semper, porta est a, vestibulum velit. Sed id rhoncus dui, ut
+            pretium mi. Praesent suscipit, dolor ut fermentum facilisis, nulla
+            orci vestibulum lectus, sed placerat nisl turpis sed urna. Integer a
+            nulla magna. Curabitur nec quam mollis, ornare dolor vitae, auctor
+            risus. Fusce tempus lectus at metus maximus, at sodales magna
+            venenatis.
+          </p>
 
-                <p>Nunc blandit euismod finibus. Praesent convallis ligula nec blandit pharetra. Praesent sodales
-                    egestas nibh, eget ornare turpis egestas fringilla. Vivamus velit sapien, posuere et turpis eget,
-                    laoreet commodo sem. Morbi molestie quis justo sit amet fringilla. Donec vel viverra elit, at
-                    eleifend neque. Nam id dui at ex ullamcorper finibus. Aenean ac ante vel nibh venenatis hendrerit.
-                    Morbi condimentum accumsan lorem vel luctus. Nullam molestie scelerisque nisl. Cras sed velit justo.
-                    Quisque ornare molestie purus non sodales.</p>
-                <ul>
-                    <li class="list-item">Apples</li>
-                    <li class="list-item">Bananas</li>
-                    <li class="list-item">Cherries</li>
-                </ul>
-            </div>
-        </main>
+          <p>
+            Nunc blandit euismod finibus. Praesent convallis ligula nec blandit
+            pharetra. Praesent sodales egestas nibh, eget ornare turpis egestas
+            fringilla. Vivamus velit sapien, posuere et turpis eget, laoreet
+            commodo sem. Morbi molestie quis justo sit amet fringilla. Donec vel
+            viverra elit, at eleifend neque. Nam id dui at ex ullamcorper
+            finibus. Aenean ac ante vel nibh venenatis hendrerit. Morbi
+            condimentum accumsan lorem vel luctus. Nullam molestie scelerisque
+            nisl. Cras sed velit justo. Quisque ornare molestie purus non
+            sodales.
+          </p>
+          <ul>
+            <li class="list-item">Apples</li>
+            <li class="list-item">Bananas</li>
+            <li class="list-item">Cherries</li>
+          </ul>
+        </div>
+      </main>
     </div>
     <ul class="global-footer">
-        <li class="footer-item-1">
-            <h2>About Me</h2>
-            <p>A highly customizable portfolio starter template with a big hero for your branding and intro. The work page is based on <a href="https://css-tricks.com/snippets/css/complete-guide-grid/" target="_blank"></a>CSS Grid</a>. The project page has a sticky sidebar. Beginngers can add their own logo, <a href="https://fonts.google.com/" target="_blank"></a>custom typography</a>, custom colours, custom hover states, custom cursor, and more.</p>
-            <p>Customize the hero and footer. Make something randomly fly across the screen! Experiment with <a href="https://mycolor.space/gradient" target="_blank">animated gradients</a>, <a href="https://blobanimation.com/" target="_blank">animated blobs</a>, animated GIFs, and <a href="https://www.svgator.com/" target="_blank">animated SVGs</a>! Add your own typewriter effect, parallax effect or custom effects and easter eggs! Consider adding a <a href="play.html">Play</a> page or <a href="resume.html">resume</a>. Don't forget to customize your <a href="404.html">404 Error Page</a> and optimize your page titles and descriptions for SEO!</p>
+      <li class="footer-item-1">
+        <h2>About Me</h2>
+        <p>
+          I'm Duncan. I was born in Whitehorse, Yukon and have lived here my
+          whole life. I enjoy reading, listening to (and occasionally creating)
+          music, and playing video games. Please take a look at a selection of
+          my works located above. I have experience in excel and I have recently
+          taken up photography and website design and have taken classes on them
+          at Yukon University. If you would like to reach me for either a
+          photography or website project please send me an
+          <a href="mailto:duncan.snooks@gmail.com" style="cursor: pointer"
+            >email</a
+          >. Thanks for visiting my website.
+        </p>
+      </li>
+      <li class="footer-item-2">
+        <h2>Visit Other Pages</h2>
+        <ul class="footer-nav-list">
+          <li class="footer-nav-item">
+            <a href="index.html"><h6>Holding Page</h6></a>
           </li>
-          <li class="footer-item-2">
-            <h2>Awards &amp; Recognition</h2>
-            <ul class="awards-list">
-              <li class="award-item"><a href="#">Award goes here</a></li>
-              <li class="award-item"><a href="#">Recognition goes here</a></li>
-              <li class="award-item"><a href="#">Award goes here</a></li>
-            </ul>
-            <h2>Selected Works</h2>
-            <ul class="footer-nav-list">
-                <li class="footer-nav-item"><a href="index.html">Holding Page</a></li>
-                <li class="footer-nav-item"><a href="work.html">Work Page</a></li>
-                <li class="footer-nav-item"><a href="work-clean.html">Work Page (Clean Version)</a></li>
-                <li class="footer-nav-item"><a href="work-clean-flier.html">Work Page (Clean Version with Flier)</a></li>
-                <li class="footer-nav-item"><a href="work-grayscale.html">Work Page (Grayscale Filter)</a></li>
-                <li class="footer-nav-item"><a href="work-ghost.html">Work Page (Ghost Flying Icon)</a></li>        
-                <li class="footer-nav-item"><a href="project-1.html">Project Page</a></li>
-                <li class="footer-nav-item"><a href="about.html">About</a></li>       
-              </ul>
+          <li class="footer-nav-item">
+            <a href="work.html"><h6>Work Page</h6></a>
           </li>
-        <li class="footer-item-3">
-            <h2>Contact &amp; Social</h2>
-            <ul class="socials-list">
-                <li class="social-item"><a href="#">Insta</a></li>
-                <li class="social-item"><a href="#">LinkedIn</a></li>
-                <li class="social-item"><a href="#">Behance</a></li>
-            </ul>
-        </li>
-        <li class="footer-item-4">
-            <p><a href="#top">Smooth scroll to the top</a></p>
-            <p class="fineprint">&copy; 2020-2024. Hand crafted with <span class="heart">❤</span> + Flexbox + CSS Grid
-                by
-                James Neufeld.</p>
-        </li>
+          <li class="footer-nav-item">
+            <a href="project-1.html"><h6>Shipyards Park Photoshoot</h6></a>
+          </li>
+          <li class="footer-nav-item">
+            <a href="project-2.html"><h6>Magazine Photoshoot</h6></a>
+          </li>
+          <li class="footer-nav-item">
+            <a href="project-3.html"><h6>Excel Workbooks</h6></a>
+          </li>
+          <li class="footer-nav-item">
+            <a href="project-4.html"><h6>Clone Hero Charts</h6></a>
+          </li>
+          <li class="footer-nav-item">
+            <a href="about.html"><h6>About Me</h6></a>
+          </li>
+        </ul>
+      </li>
+      <li class="footer-item-3">
+        <h2>Contact &amp; Social</h2>
+        <ul class="socials-list">
+          <li class="social-item">
+            <a href="mailto:duncan.snooks@gmail.com" style="cursor: pointer"
+              ><i class="fa-solid fa-envelope"></i>
+              <h6>Email</h6></a
+            >
+          </li>
+          <li class="social-item">
+            <a href="https://www.linkedin.com/in/duncan-snooks-531017300/"
+              ><i class="fa-brands fa-linkedin"></i>
+              <h6>LinkedIn</h6></a
+            >
+          </li>
+          <li class="social-item">
+            <a href="https://codepen.io/duncan0714"
+              ><i class="fa-brands fa-codepen"></i>
+              <h6>Codepen</h6></a
+            >
+          </li>
+          <li class="social-item">
+            <a href="https://github.com/duncan0714"
+              ><i class="fa-brands fa-github"></i>
+              <h6>Github</h6></a
+            >
+          </li>
+        </ul>
+      </li>
+      <li class="footer-item-4">
+        <p><a href="#top">Back To Top</a></p>
+        <p class="fineprint">&copy; 2024 Duncan Snooks.</p>
+      </li>
     </ul>
 
-    <div id="myID" class="bottomMenu hide"><a href="project-1.html">Previous Project</a></div>
+    <div id="myID" class="bottomMenu hide">
+      <a href="project-1.html">Previous Project</a>
+    </div>
 
     <script type="text/javascript">
-        myID = document.getElementById("myID");
+      myID = document.getElementById("myID");
 
-        var myScrollFunc = function () {
-            var y = window.scrollY;
-            if (y >= 800) {
-                myID.className = "bottomMenu show"
-            } else {
-                myID.className = "bottomMenu hide"
-            }
-        };
+      var myScrollFunc = function () {
+        var y = window.scrollY;
+        if (y >= 800) {
+          myID.className = "bottomMenu show";
+        } else {
+          myID.className = "bottomMenu hide";
+        }
+      };
 
-        window.addEventListener("scroll", myScrollFunc);
+      window.addEventListener("scroll", myScrollFunc);
     </script>
-</body>
-
+  </body>
 </html>
