Resizable video player added

--- a/project-4.html
+++ b/project-4.html
@@ -149,11 +149,12 @@
         </ul>
       </aside>
       <main class="project-details">
-        <div>
+        <div class="video-container">
           <iframe
             width="720"
             height="405"
             src="https://youtube.com/embed/ZKewbI5XP_M"
+            allowfullscreen
           >
           </iframe>
         </div>
